Add presentation bar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
                             </ul>
                         </div>
                     </nav>
+                    <div class="presentation">
+                        <div class="box-left">
+                            <div class="main-title">This website is awesome</div>
+                            <div class="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast.</div>
+                            <button class="sign-button">Sign up</button>
+                        </div>
+                        <div class="box-right">
+                            <img src="./image1.jpg" type="image/jpg">
+                        </div>
+                    </div>
+                </div>
             </div>
           
     </body>
