--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
                     </div>
                 </div>
             </div>
-          
+            <div class="second-container">
+                <div class="content-box sub-container">
+                    <div class="information">Some random information</div>
+                    <div class="card-container">
+                        <div class="card">
+                            <div class="card-image"></div>
+                            <div class="card-text">this is some subtext under an illustration or image</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image"></div>
+                            <div class="card-text">this is some subtext under an illustration or image</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image"></div>
+                            <div class="card-text">this is some subtext under an illustration or image</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image"></div>
+                            <div class="card-text">this is some subtext under an illustration or image</div>
+                        </div>
+                    </div>
+                </div>
+            </div>  
+
     </body>
 </html>
