--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     </div>
                 </div>
             </div>  
-
+            <div class="third-container">
+                <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that is looks nice.</div>
+                <div>-Thor, God of Thunder</div>
+            </div>
     </body>
 </html>
