--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
                 </div>
             </div>  
             <div class="third-container">
-                <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that is looks nice.</div>
-                <div>-Thor, God of Thunder</div>
+                <div class="content-box quote-container">
+                    <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that is looks nice.</div>
+                    <div class="quote-author">-Thor, God of Thunder</div>
+                </div>
             </div>
     </body>
 </html>
