Change some classes namings

--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
                 </div>
             </div>
             <div class="fourth-container">
-                <div class="call-box content-box">
-                    <div class="call-left">
-                        <div class="call-title">Call to action! It's Time!</div>
-                        <div class="call-text">Sign up for our product by clicking that button right over there!</div>
-                    </div>
-                    <div class="call-right">
-                        <button>Sign Up</button>
+                <div class="call-box">
+                    <div class="call-content">
+                        <div class="call-left">
+                            <div class="call-title">Call to action! It's Time!</div>
+                            <div class="call-text">Sign up for our product by clicking that button right over there!</div>
+                        </div>
+                        <div class="call-right">
+                            <button>Sign Up</button>
+                        </div>
                     </div>
                 </div>
             </div>
