Add fifth container (footer container)

--- a/index.html
+++ b/index.html
@@ -76,5 +76,8 @@
                     </div>
                 </div>
             </div>
+            <div class="fifth-container">
+                <div class="footer">Copyright © panpi-loska 2025</div>
+            </div>
     </body>
 </html>
